[package]
name = "wage"
version = "0.0.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
chrono = { version = "0.4", features = ["wasmbind"] }
futures = "0.3"
# We need to have a dependency on every version of getrandom in our tree, to set
# their corresponding feature flags to enable WASM support.
getrandom_1 = { package = "getrandom", version = "0.1", features = ["wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }
i18n-embed = { version = "0.13", features = ["fluent-system", "web-sys-requester"] }
js-sys = "0.3"
pin-project = "1"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.age]
version = "0.9"
features = ["armor", "async", "web-sys"]

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "BlobPropertyBag",
    "File",
    "ReadableStream",
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
